2004-02-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/ramfs.c (findbuffer_node): If pos larger than even INDIRECT2_MAX
	then return ENOSPC, not EINVAL. Thanks to Vincent Catros for spotting
	this.

2004-01-08  Vincent Catros  <Vincent.Catros@elios-informatique.fr>

	* src/ramfs.c (ramfs_fo_write): Return ENOSPC when the filesystem
	is full.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/ramfs.cdl: Fix doc link.

2002-12-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/ramfs.cdl: Implements the CYGINT_IO_FILEIO_FS interface

2002-01-25  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/fileio1.c (main): Check in listdir that the number of 
	dirents is correct.

2001-07-26  Jonathan Larmour  <jlarmour@redhat.com>

	* src/ramfs.c (findbuffer_indirect1): Determine correct offset in
	indirect block list.
	(findbuffer_indirect2): Ditto.
	(findbuffer_direct): Compare block index with number of blocks
	correctly.

2000-10-05  Nick Garnett  <nickg@cygnus.co.uk>

	* tests/fileio1.c:
	Extended to check getcwd() and chdir() functionality more fully.

2000-08-18  Nick Garnett  <nickg@cygnus.co.uk>

	* cdl/ramfs.cdl:
	* src/ramfs.c:
	* tests/fileio1.c:
	Created this example RAM filesystem both as a usable filesystem
	and as an example of how to build filesystems for the fileio
	infrastructure.



//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or